--- a/vue-ad-yi/package.json
+++ b/vue-ad-yi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-ad-yi",
-  "version": "1.1.5",
+  "version": "1.1.10",
   "description": "A Vue.js project",
   "author": "huangqian0327 <huangqian@yijia.ai>",
   "private": false,
@@ -16,6 +16,7 @@
   "dependencies": {
     "less": "^3.7.1",
     "less-loader": "^4.1.0",
+    "lodash": "^4.17.10",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
