--- a/vue-ad-yi/package.json
+++ b/vue-ad-yi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-ad-yi",
-  "version": "1.1.10",
+  "version": "1.1.14",
   "description": "A Vue.js project",
   "author": "huangqian0327 <huangqian@yijia.ai>",
   "private": false,
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "element-ui": "^2.4.5",
     "less": "^3.7.1",
     "less-loader": "^4.1.0",
     "lodash": "^4.17.10",
